# tut-django-like-shell-plus

./: manage.py  pyproject.toml
