[tool.poetry]
name = "tut-django-like-shell-plus"
version = "0.1.0"
description = ""
authors = ["Satheesh Kumar <mail@satheesh.dev"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
ipython = "^8.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
